fix: title hover color visible again (#999)

--- a/source/css/_partial/archive.styl
+++ b/source/css/_partial/archive.styl
@@ -42,7 +42,7 @@
   color: #555
   line-height: line-height
   &:hover
-    color: color-grey
+    color: #999
 
 .archive-article-footer
   margin-top: 1em
