--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -37,7 +37,7 @@
   line-height: line-height-title
   transition: color 0.2s
   a&:hover
-    color: color-grey
+    color: #999
 
 if (hexo-config("title-number") == "config")
   .article-with-titlenum
